# lumi_v3

./: Cargo.toml  README.md
crates/lumi_ast/: Cargo.toml
crates/lumi_ast/src/: lib.rs  node.rs  utils.rs  visitor.rs
crates/lumi_ast/tests/: mod.rs  node_tests.rs  visitor_tests.rs
crates/lumi_bytecode/: Cargo.toml
crates/lumi_bytecode/src/: core.rs  generator.rs  instruction.rs  lib.rs
crates/lumi_bytecode/tests/: assignment_tests.rs  basic_literal_tests.rs  benchmark_tests.rs  mod.rs  statements_tests.rs  variable_tests.rs
crates/lumi_engine/src/: engine.rs  main.rs
crates/lumi_lexer/: Cargo.toml  checklist.md
crates/lumi_lexer/src/: error.rs  lexer.rs  lib.rs  token.rs
crates/lumi_lexer/tests/: benchmark_tests.rs  error_tests.rs  integration_tests.rs  lexer_tests.rs  mod.rs
crates/lumi_parser/: Cargo.toml
crates/lumi_parser/src/: error.rs  lib.rs  parser.rs  recovery.rs
crates/lumi_parser/tests/: basic_tests.rs  benchmark_tests.rs  block_statement_tests.rs  declaration_tests.rs  for_statement_tests.rs  function_statement_tests.rs  (+2 more)
crates/lumi_runtime/: Cargo.toml
crates/lumi_semantic/: Cargo.toml
crates/lumi_semantic/src/: analyzer.rs  errors.rs  lib.rs  scope.rs  types.rs
crates/lumi_semantic/tests/: assignment_tests.rs  basic_tests.rs  mod.rs  statement_tests.rs
crates/lumi_test/: Cargo.toml
crates/lumi_test/src/: lib.rs  main.rs
crates/lumi_vm/: Cargo.toml
docs/architecture/: crate-architecture.md  engine-overview.md
docs/bugs/: functions.md  known-bugs.md
docs/development/: crates_checklist.md  roadmap.md  setup.md
(+24 files in other folders)
