[workspace]
members = [ 
    "crates/lumi_ast",
    "crates/lumi_lexer"
, "crates/lumi_parser"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["lumi_v3 Team"]
description = "Lumi engine"

[workspace.dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive" ] }
