[package]
name = "lumi_semantic"
version = "0.1.0"
edition = "2024"
description = "Semantic analysis for the Lumi engine"
license = "MIT"

[dependencies]
lumi_ast = { path = "../lumi_ast" }
lumi_parser = { path = "../lumi_parser" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0" 